[metadata]
name = climwebwdqms
version = 0.0.1
description = National level WDQMS Summary tool
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/wmo-raf/climweb-wdqms
author = Grace Amondi
author_email = miswa.grace@gmail.com
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    wagtail>=4.2.2
    pandas>=2.2.2
    requests
    numpy
    djangorestframework
    django-filter
    adm-boundary-manager